Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1650

Inactivity cop should use TRY_LOCK instead of LOCK to avoid deadlock.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.3.0
    • 3.3.1
    • None
    • None

    Description

      In situations where a connection may have died while holding on to a mutex this can result in deadlock. Inactivity cop's only job is to cleanup and since it's trying to LOCK it will block. Instead we should just use a TRY_LOCK and continue cleaning up the remaining connections.

      Attachments

        Activity

          People

            briang Brian Geffon
            briang Brian Geffon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: