TS-1650: Inactivity cop should use TRY_LOCK instead of LOCK to avoid deadlock